--- a/indexx.html
+++ b/indexx.html
@@ -45,7 +45,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background-image: linear-gradient(180deg, rgba(144, 118, 128, 0.767), rgba(21, 15, 71, 0.767)), url(./pictures/SQI-CLASS-SHOT\ \(1\).jpg);
+            background-image: linear-gradient(180deg, rgba(144, 118, 128, 0.767), rgba(21, 15, 71, 0.767)), url(./SQI-CLASS-SHOT.jpg );
             background-size: cover;
         }
         .section-one h1{
@@ -422,7 +422,7 @@
 <body>
     <div class="img">
         <p>Need Help? <b>Chat with us</b></p>
-        <img src="./pictures/whatsapp-removebg-preview.png" alt="">
+        <img src="./whatsapp-removebg-preview.png" alt="">
         <div class="top">
             <a href="#top" id="bottom"><span class="material-symbols-outlined">keyboard_control_key</span></a>
         </div>
