--- a/indexx.html
+++ b/indexx.html
@@ -632,11 +632,11 @@
             <div></div>
             <p>We provide and lead <br>others in quality ICT <br> education.</p><br>
             <div>
-                <img src="../f.png" alt="facebook">
-                <img src="../x.png" alt="twitter">
-                <img src="../i.png" alt="linkedin">
-                <img src="../y.jpeg" alt="youtube">
-                <img src="../insta.png" alt="instagram">
+                <img src="./f.png" alt="facebook">
+                <img src="./x.png" alt="twitter">
+                <img src="./i.png" alt="linkedin">
+                <img src="./y.jpeg" alt="youtube">
+                <img src="./insta.png" alt="instagram">
             </div>
             
             <p>Send us a mail</p>
